--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EncryptText</string>
     <string name="welcome_text">Welcome to the App. There you can encrypt your text. Press start for beginning</string>
     <string name="start">Start</string>
+    <string name="encrypt">Encrypt</string>
     <string name="hint">Please, enter your text for encrypt</string>
     <string name="resultsText">Here is your encrypted text</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
