--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="hint">Please, enter your text for encrypt</string>
     <string name="resultsText">Here is your encrypted text</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="encrypted_text">*Encrypted*</string>
+    <string name="encrypted_text">*EncryptedEncryptedEncryptedEncryptedEncryptedEncryptedEncrypted*</string>
 </resources>
